# twitter_watcher

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: test.yml
tests/: test_basic.py
twitter_watcher/: __main__.py  config.py  notify.py  parser.py  reader.py
